Stop Kamera KCM holding the camera device

Kamera did not properly close and delete the camera devices abstractions

However, the camera device will be held by Kamera KCM as long as it is running and other applications cannot access the camera device while Kamera KCM is open. We could call `gp_camera_exit` after every operation, but then camera access takes some time (~ 10s) for every operation (not only the first one).

BUG: 487824